--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "portfolio",
+  "homepage":"htpp://zulfiyadeveloper.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "emailjs-com": "^3.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
