--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "homepage": "htpp://zulfiya-yumagulova.github.io/zulfiya-portfolio",
+  "homepage": "",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
